--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.464.0",
     "next": "14.2.20",
+    "next-pwa": "^5.6.0",
     "onnxruntime-web": "^1.19.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
